fix align style

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
     width: 80%;
     min-height: 100vh;
     margin: 0 auto;
+    padding: 0 3rem;
 }
 
 form{
